<resources>
    <string name="app_name">FilePicker</string>

    <string name="nnf_new_folder">New folder</string>

    <string name="nnf_create_folder_error">Failed to create folder</string>

    <string name="nnf_name">Name</string>

    <string name="nnf_select_something_first">Please select something first</string>

    <string name="nnf_need_valid_filename">Please enter or select a valid filename</string>

    <string name="nnf_permission_external_write_denied">Permisson to access filesystem denied</string>

    <string name="nnf_filename">Filename</string>

    <string name="nnf_list_ok">@android:string/ok</string>

    <string name="nnf_list_cancel">@android:string/cancel</string>

    <string name="nnf_new_folder_ok">@android:string/ok</string>

    <string name="nnf_new_folder_cancel">@android:string/cancel</string>

    <string name="app_repo">https://github.com/mthli/Knife</string>

    <!-- Menu -->
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_github">GitHub</string>

    <!-- Dialog -->
    <string name="dialog_title">Insert link</string>
    <string name="dialog_edit_hint">http(s)://</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>

    <!-- Toast -->
    <string name="toast_bold">Bold</string>
    <string name="toast_italic">Italic</string>
    <string name="toast_underline">Underline</string>
    <string name="toast_strikethrough">Strikethrough</string>
    <string name="toast_bullet">Bullet</string>
    <string name="toast_quote">Quote</string>
    <string name="toast_insert_link">Insert link</string>
    <string name="toast_format_clear">Format clear</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="settings">Settings</string>

    <string name="rate">Rate</string>

    <string name="about">About</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <!-- Example General settings -->


    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>

    <string name="pref_description_social_recommendations">Recommendations for people to contactbased on your message history </string>

    <string name="pref_title_display_name">Display name</string>

    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>


    -<string-array name="pref_example_list_titles">

    <item>Always</item>

    <item>When possible</item>

    <item>Never</item>

</string-array>


    -<string-array name="pref_example_list_values">

    <item>1</item>

    <item>0</item>

    <item>-1</item>

</string-array>

    <!-- Example settings for Data & Sync -->


    <string name="pref_header_data_sync">Data and sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>


    -<string-array name="pref_sync_frequency_titles">

    <item>15 minutes</item>

    <item>30 minutes</item>

    <item>1 hour</item>

    <item>3 hours</item>

    <item>6 hours</item>

    <item>Never</item>

</string-array>


    -<string-array name="pref_sync_frequency_values">

    <item>15</item>

    <item>30</item>

    <item>60</item>

    <item>180</item>

    <item>360</item>

    <item>-1</item>

</string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->


    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="remove">Remove</string>

    <string name="down">Down</string>

    <string name="up">Up</string>

    <string name="merge">Merge</string>

    <string name="version">0.1.1-beta from android-beta branch</string>

    <string name="imgcdesc">Little\'s PDF Merge Logo</string>

    <string name="lpmdroid">Little\'s PDF Merge for Android</string>
</resources>