<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->
    <menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/merge" app:showAsAction="never" android:orderInCategory="100" android:id="@+id/merge"/>

    <item android:title="@string/up" app:showAsAction="never" android:orderInCategory="100" android:id="@+id/up"/>

    <item android:title="@string/down" app:showAsAction="never" android:orderInCategory="100" android:id="@+id/down"/>

    <item android:title="@string/remove" app:showAsAction="never" android:orderInCategory="100" android:id="@+id/rm"/>

</menu>