<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/undo"
        android:title="@string/menu_undo"
        android:icon="@drawable/ic_action_undo"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/redo"
        android:title="@string/menu_redo"
        android:icon="@drawable/ic_action_redo"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/github"
        android:title="@string/menu_github"
        app:showAsAction="collapseActionView">
    </item>

</menu>