<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->

    <menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

    <item android:title="@string/rate" android:icon="@drawable/ic_star_24dp" android:id="@+id/nav_slideshow"/>

    <item android:title="@string/settings" android:icon="@drawable/ic_settings_24dp" android:id="@+id/nav_camera"/>

    <item android:title="SuicSoft.com" android:icon="@drawable/ic_exit_to_app_24dp" android:id="@+id/nav_manage"/>

    <item android:title="@string/about" android:icon="@drawable/ic_info_outline_24dp" android:id="@+id/nav_gallery"/>

</group>


    <item android:title="Communicate">


    <menu>

    <item android:title="Report a bug" android:icon="@drawable/ic_bug_report_24dp" android:id="@+id/nav_send"/>

</menu>

</item>

</menu>